<resources>
    <string name="app_name">Rick and morty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="rick_and_morty_api_base_url">https://rickandmortyapi.com/api/</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="continuar">Continue</string>
    <string name="data_is_not_complete">The necessary data was not completed</string>
    <string name="night_mode">Night mode</string>
    <string name="screen">Screen</string>
    <string name="status">Status</string>
    <string name="specie">Specie</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_to_favorites">Remove to favorites</string>
    <string name="account">Account</string>
</resources>