<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.rickandmorty.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_characterFragment"
            app:destination="@id/characterFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
        <action
            android:id="@+id/action_homeFragment_to_logoutFragment"
            app:destination="@id/logoutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterFragment"
        android:name="com.rickandmorty.fragments.CharacterFragment"
        tools:layout="@layout/fragment_character">
        <argument
            android:name="characterId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.rickandmorty.fragments.FavoriteFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_characterFragment"
            app:destination="@id/characterFragment" />
    </fragment>
    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.rickandmorty.fragments.LogoutFragment"
        android:label=""
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.rickandmorty.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>