<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CharacterFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragmentCharacterToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/design_default_color_surface"
        app:titleTextColor="@color/design_default_color_surface" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCharacterToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragmentCharacterImage"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/status"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragmentCharacterStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_character_item"
                android:paddingVertical="8dp"
                android:paddingStart="16dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/specie"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragmentCharacterSpecie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_character_item"
                android:paddingVertical="8dp"
                android:paddingStart="16dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragmentCharacterGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_character_item"
                android:paddingVertical="8dp"
                android:paddingStart="16dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/origin"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragmentCharacterOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_character_item"
                android:paddingVertical="8dp"
                android:paddingStart="16dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragmentCharacterLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_character_item"
                android:paddingVertical="8dp"
                android:paddingStart="16dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/fragmentCharacterAddFavorites"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/add_to_favorites"
                android:visibility="gone"
                app:icon="@drawable/ic_baseline_favorite_24" />

            <Button
                android:id="@+id/fragmentCharacterRemoveFavorites"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/remove_to_favorites"
                android:backgroundTint="@color/design_default_color_error"
                android:visibility="gone"
                app:icon="@drawable/ic_baseline_favorite_border_24" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>